--- a/package.json
+++ b/package.json
@@ -4,8 +4,11 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node api/index.js"
+  "test": "echo \"Error: no test specified\" && exit 1",
+  "start": "node api/index.js",
+  "build": "echo \"No build step required\""
+}
+
   },
   "keywords": [],
   "author": "",
