--- a/package.json
+++ b/package.json
@@ -4,11 +4,9 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-  "test": "echo \"Error: no test specified\" && exit 1",
-  "start": "node api/index.js",
-  "build": "echo \"No build step required\""
-}
-
+    "start": "node index.js",
+    "dev": "node index.js",
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
